--- a/QuizMastery.Web/QuizMastery.Web.csproj
+++ b/QuizMastery.Web/QuizMastery.Web.csproj
@@ -14,11 +14,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuizMastery.Business\QuizMastery.Business.csproj" />
+    <ProjectReference Include="..\QuizMastery.DataAccess\QuizMastery.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
