--- a/QuizMastery.Web/appsettings.json
+++ b/QuizMastery.Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=QuizMastery;Trusted_Connection=True"
+    "DefaultConnection": "Server=.;Database=QuizMastery;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
