--- a/QuizMastery.Business/QuizMastery.Business.csproj
+++ b/QuizMastery.Business/QuizMastery.Business.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\QuizMastery.DataAccess\QuizMastery.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
