--- a/QuizMastery.Business/QuizMastery.Business.csproj
+++ b/QuizMastery.Business/QuizMastery.Business.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit" Version="4.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\QuizMastery.DataAccess\QuizMastery.DataAccess.csproj" />
   </ItemGroup>
 
